# CMakeHelloWorld

./: CMakeLists.txt  Dockerfile  README.md  test_main.cpp  udp_server.py
.github/workflows/: cmake.yml
build2/: CMakeCache.txt  HelloWorld  HelloWorldTest  HelloWorldTest[1]_include.cmake  HelloWorldTest[1]_tests.cmake  Makefile  cmake_install.cmake
